# news-sentiment-mcp

./: README.md  pyproject.toml
src/news_sentiment_mcp/: __init__.py
